assets/styles.css
/* Styles for index.html */

body {
  background-image:url("bg_paper1.jpg");
  background-repeat: repeat;
}
.body_container {
  padding: 30px;
  display: none;
  overflow: hidden;
}
.orange {
  color: orange;
}
.blue {
  color: #4682B4;
}
.text-container {
  overflow: hidden;
  text-align: center;
}

.heading-container {
  /*font-size:8em;*/
  margin-top: 50px;
  margin-bottom: 50px;
}
.profile-img-container {
  width: 100%;
  margin: 5px auto;
  text-align: center;
}
.work-container, .subwork-container {
  min-height:70px;
  /*font-size: 54px;*/
}
.work-container a {
  text-decoration: none;
}
.subwork-container {
  margin-bottom: 40px;
  overflow: hidden;
}
.contact-bar {
 margin-top: 50px;
 height: 100px;
}
div.contact-img {
  text-align: center;
  vertical-align: bottom;
  display: none;
  margin-top: 10px;
}
div.contact-img img{
  width:60px
}
div.contact-img img:hover{
  width:70px;
  -webkit-transition: width 0.1s; /* Safari */
  transition: width 0.1s;
  cursor: pointer;
}
/* Styles for typed.js for a typed-cursor */
.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}
@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

